tests/golden/errors/blank_line_in_body.stderr
error[formatting]: blank lines may not appear inside a body
  --> blank_line_in_body.kso:4:1
   4 |   print "{x}"
       ^
